# userstorywriter-agentic-ai

./: .env  .gitignore  .ignore  Todo.md  a2as.yaml  main.py  pyproject.toml
api/: .env  pyproject.toml
api/app/: logging_config.py  main.py
api/app/api/: routes.py
api/app/model/: AcceptanceCriteriaModel.py  RequirementsInput.py  UserStoryModel.py  UserStoryResponse.py  __init__.py
api/app/service/: userstorylogic.py
ui/: package-lock.json  package.json
ui/src/: App.css  App.jsx  App1.jsx  styles.css
ui/src/modules/: HealthCheck.jsx  UserStoryWriter.jsx  formatresponse.js
